WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
11085
REGRESSION: favicon.ico always looked for on port 80
https://bugs.webkit.org/show_bug.cgi?id=11085
Summary
REGRESSION: favicon.ico always looked for on port 80
Andy K
Reported
2006-09-29 08:48:49 PDT
According to the activity window while browsing a site on port 9000; favicon.ico was being looked for at default http port.
Attachments
showing all other resources loaded on port 9000 with favicon.ico not specifying port
(11.08 KB, image/png)
2006-09-29 08:50 PDT
,
Andy K
no flags
Details
Patch
(1.06 KB, patch)
2007-01-28 22:16 PST
,
Mark Rowe (bdash)
beidson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andy K
Comment 1
2006-09-29 08:50:39 PDT
Created
attachment 10836
[details]
showing all other resources loaded on port 9000 with favicon.ico not specifying port
Andy K
Comment 2
2006-09-29 08:53:38 PDT
Indeed the icon isn't shown in the address bar but the real kicker is it causes the page to appear to be still loading for some time before the request times out and the 'page loading' indicators cease.
David Kilzer (:ddkilzer)
Comment 3
2006-09-29 09:47:33 PDT
Andy, does shipping Safari (in 10.4) load the favicon on port 9000 properly?
Andy K
Comment 4
2006-09-29 09:54:53 PDT
Yes it does.
Brady Eidson
Comment 5
2006-09-29 09:58:18 PDT
Yah, definitely a regression - I can get to this soon-ish
Matt Lilek
Comment 6
2007-01-27 18:27:03 PST
***
Bug 12447
has been marked as a duplicate of this bug. ***
Mark Rowe (bdash)
Comment 7
2007-01-28 22:16:29 PST
Created
attachment 12734
[details]
Patch
Brady Eidson
Comment 8
2007-01-28 22:19:11 PST
Comment on
attachment 12734
[details]
Patch yah
Mark Rowe (bdash)
Comment 9
2007-01-29 03:51:04 PST
Landed in
r19208
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug