2007-01-29  Mark Rowe  <mrowe@apple.com>

Reviewed by Brady.

        http://bugs.webkit.org/show_bug.cgi?id=11085
        Bug 11085: REGRESSION: favicon.ico always looked for on port 80

        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::iconURL): Copy the port over to the favicon URL.


Canonical link: https://commits.webkit.org/16159@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19208 268f45cc-cd09-0410-ab3c-d52691b4dbfc