WebCore/loader/FrameLoader.cpp
@@ -625,6 +625,7 @@ KURL FrameLoader::iconURL()
     KURL url;
     url.setProtocol(m_URL.protocol());
     url.setHost(m_URL.host());
+    url.setPort(m_URL.port());
     url.setPath("/favicon.ico");
     return url;
 }
